# 3ddesignapp

./: .gitignore  BUILD_NOTES.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  INTEGRATION_FIXES.md  LICENSE  MARKETING.md  PROJECT_BRIEF.md  PROJECT_STATUS.md  README.md  build.bat  build.sh
.github/workflows/: build.yml  release.yml
docs/: ARCHITECTURE.md  BUILD_SETUP.md  PRO_FEATURES.md  REQUIREMENTS.md  STYLE_GUIDE.md  TECH_DECISIONS.md  UI_DESIGN.md  USER_FLOWS.md
docs/screenshots/: README.md
resources/: resources.qrc
resources/shaders/: deviation.frag  deviation.vert  grid.frag  grid.vert  line.frag  line.vert  mesh.frag  mesh.vert  selection.frag  selection.vert
src/app/: Application.cpp  Application.h  CMakeLists.txt  ImportCommand.cpp  ImportCommand.h  main.cpp
src/core/: CMakeLists.txt  Command.h  CommandStack.cpp  CommandStack.h  IntegrationController.cpp  IntegrationController.h  OperationResult.cpp  OperationResult.h  SceneManager.cpp  SceneManager.h  Selection.cpp  Selection.h  SnapManager.cpp  SnapManager.h
src/core/Commands/: AlignmentCommand.cpp  AlignmentCommand.h  DeleteCommand.cpp  DeleteCommand.h  ImportMeshCommand.cpp  ImportMeshCommand.h  MeshEditCommand.cpp  MeshEditCommand.h  TransformCommand.cpp  TransformCommand.h
src/geometry/: Alignment.cpp  Alignment.h  BVH.cpp  BVH.h  CMakeLists.txt  DeviationAnalysis.cpp  DeviationAnalysis.h  HalfEdgeMesh.cpp  HalfEdgeMesh.h  ICP.cpp  ICP.h  MeshAnalysis.cpp  MeshAnalysis.h  MeshData.cpp  MeshData.h  MeshDecimation.cpp  MeshDecimation.h  MeshRepair.cpp  MeshRepair.h  MeshSmoothing.cpp  MeshSmoothing.h  MeshSubdivision.cpp  MeshSubdivision.h  NURBSSurface.cpp  NURBSSurface.h  PrimitiveGenerator.cpp  PrimitiveGenerator.h
src/geometry/freeform/: AutoSurface.cpp  AutoSurface.h  QuadMesh.cpp  QuadMesh.h  SurfaceFit.cpp  SurfaceFit.h  WrapSurface.cpp  WrapSurface.h
src/geometry/mesh/: TriangleMesh.h
src/geometry/nurbs/: NurbsCurve.h  NurbsSurface.h
src/geometry/primitives/: Cone.cpp  Cone.h  Cylinder.cpp  Cylinder.h  Plane.cpp  Plane.h  PrimitiveFitter.cpp  PrimitiveFitter.h  Sphere.cpp  Sphere.h  SymmetryPlane.cpp  SymmetryPlane.h
src/geometry/solid/: BooleanOps.cpp  BooleanOps.h  Chamfer.cpp  Chamfer.h  Fillet.cpp  Fillet.h  Solid.cpp  Solid.h
src/geometry/surfaces/: Extrude.cpp  Extrude.h  Loft.cpp  Loft.h  Pipe.cpp  Pipe.h  PlanarSurface.cpp  PlanarSurface.h  Revolve.cpp  Revolve.h  Sweep.cpp  Sweep.h
src/io/: CMakeLists.txt  ExportOptions.h  IGESExporter.cpp  IGESExporter.h  IGESImporter.cpp  IGESImporter.h  MeshImporter.cpp  MeshImporter.h  NativeFormat.cpp  NativeFormat.h  OBJImporter.cpp  OBJImporter.h  PLYImporter.cpp  PLYImporter.h  STEPExporter.cpp  STEPExporter.h  STEPImporter.cpp  STEPImporter.h  STLImporter.cpp  STLImporter.h
src/renderer/: CMakeLists.txt  Camera.cpp  Camera.h  DeviationRenderer.cpp  DeviationRenderer.h  GridRenderer.cpp  GridRenderer.h  Picking.cpp  Picking.h  PrimitiveRenderer.cpp  PrimitiveRenderer.h  SectionPlaneGizmo.cpp  SectionPlaneGizmo.h  SelectionRenderer.cpp  SelectionRenderer.h  ShaderProgram.cpp  ShaderProgram.h  SnapIndicatorRenderer.cpp  SnapIndicatorRenderer.h  TransformGizmo.cpp  TransformGizmo.h  Viewport.cpp  Viewport.h
src/sketch/: CMakeLists.txt  SectionCreator.cpp  SectionCreator.h  Sketch.cpp  Sketch.h  SketchSolver.cpp  SketchSolver.h
src/sketch/entities/: SketchArc.cpp  SketchArc.h  SketchCircle.cpp  SketchCircle.h  SketchEntity.cpp  SketchEntity.h  SketchLine.cpp  SketchLine.h  SketchPoint.cpp  SketchPoint.h  SketchSpline.cpp  SketchSpline.h
src/ui/: CMakeLists.txt  HelpSystem.cpp  HelpSystem.h  MainWindow.cpp  MainWindow.h  MenuBar.cpp  MenuBar.h  ObjectBrowser.cpp  ObjectBrowser.h  PropertiesPanel.cpp  PropertiesPanel.h  StatusBar.cpp  StatusBar.h  Toolbar.cpp  Toolbar.h  TransformInputWidget.cpp  TransformInputWidget.h  ViewPresetsWidget.cpp  ViewPresetsWidget.h
src/ui/dialogs/: AboutDialog.cpp  AboutDialog.h  AlignToWCSDialog.cpp  AlignToWCSDialog.h  AutoSurfaceDialog.cpp  AutoSurfaceDialog.h  ClippingBoxDialog.cpp  ClippingBoxDialog.h  ExportDialog.cpp  ExportDialog.h  ExportFormatDialog.cpp  ExportFormatDialog.h  ExportPresetManager.cpp  ExportPresetManager.h  ExportPresetsDialog.cpp  ExportPresetsDialog.h  ExtrudeDialog.cpp  ExtrudeDialog.h  FineAlignDialog.cpp  FineAlignDialog.h  FitSurfaceDialog.cpp  FitSurfaceDialog.h  GettingStartedDialog.cpp  GettingStartedDialog.h  HoleFillDialog.cpp  HoleFillDialog.h  KeyboardShortcutsDialog.cpp  KeyboardShortcutsDialog.h  MeshRepairWizard.cpp  MeshRepairWizard.h  NPointAlignDialog.cpp  NPointAlignDialog.h  OutlierRemovalDialog.cpp  OutlierRemovalDialog.h  PolygonReductionDialog.cpp  PolygonReductionDialog.h  PreferencesDialog.cpp  PreferencesDialog.h  PrimitiveCreationDialog.cpp  PrimitiveCreationDialog.h  (+10 more)
src/ui/panels/: AnalysisPanel.cpp  AnalysisPanel.h
src/ui/sketch/: ArcTool.cpp  ArcTool.h  CMakeLists.txt  DimensionTool.cpp  DimensionTool.h  LineTool.cpp  LineTool.h  SketchMode.cpp  SketchMode.h  SketchTool.cpp  SketchTool.h  SketchToolbox.cpp  SketchToolbox.h  SketchViewport.cpp  SketchViewport.h  SplineTool.cpp  SplineTool.h
src/ui/tools/: AlignmentTool.cpp  AlignmentTool.h  FreeformTool.cpp  FreeformTool.h  MeasureTool.cpp  MeasureTool.h
tests/: CMakeLists.txt  test_main.cpp
